first offical version

--- a/movieDetails.html
+++ b/movieDetails.html
@@ -38,9 +38,10 @@
                 Actors:
                 <span id="actors">N/A</span>
             </div>
-            <div>
+            <div class="rating-imdb">
                 IMDB Ratings:
-                <span id="imdbRatings">N/A</span>
+                <span id="imdbRatings">N/A</span> 
+                <div><img class="rating" src="images/star.svg"></div>
             </div>
             <div>
                     Awards: 
