--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+    <meta property="og:title" content="Just Testing" />
+    <meta property="og:description" content="Keval movie site" />
+    <meta property="og:image" content="https://m.media-amazon.com/images/M/MV5BMTMxNTMwODM0NF5BMl5BanBnXkFtZTcwODAyMTk2Mw@@._V1_SX300.jpg" />
+    <meta property="og:url" content="https://movie-manager-swart.vercel.app/" />
+    <meta property="og:type" content="website" />
   </head>
 
   <body>
