--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <meta property="og:title" content="Keval - Your Movie Manager" />
-    <meta property="og:description" content="Explore and Store your Favourites Movies List" />
-    <meta property="og:image" content="https://m.media-amazon.com/images/M/MV5BMTMxNTMwODM0NF5BMl5BanBnXkFtZTcwODAyMTk2Mw@@._V1_SX300.jpg" />
-    <meta property="og:url" content="https://movie-manager-swart.vercel.app/" />
-    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Keval - Your Movie Manager" data-react-helmet="true">/>
+    <meta property="og:description" content="Explore and Store your Favourites Movies List" data-react-helmet="true">/>
+    <meta property="og:image" content="https://m.media-amazon.com/images/M/MV5BMTMxNTMwODM0NF5BMl5BanBnXkFtZTcwODAyMTk2Mw@@._V1_SX300.jpg" data-react-helmet="true">/>
+    <meta property="og:url" content="https://movie-manager-swart.vercel.app/" data-react-helmet="true">/>
+    <meta property="og:type" content="website" data-react-helmet="true">/>
   </head>
 
   <body>
